--- a/winChat.ui
+++ b/winChat.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>783</width>
-    <height>419</height>
+    <width>782</width>
+    <height>417</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -157,19 +157,6 @@
       <string notr="true">background-color: rgb(243, 243, 243);</string>
      </property>
     </widget>
-    <widget class="QTextBrowser" name="tbReceivedMessages">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>90</y>
-       <width>421</width>
-       <height>192</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(238, 238, 236);</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
@@ -188,6 +175,19 @@
      </property>
      <property name="text">
       <string>Received Messages:</string>
+     </property>
+    </widget>
+    <widget class="QListWidget" name="lwReceivedMessages">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>96</y>
+       <width>430</width>
+       <height>190</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(238, 238, 236);</string>
      </property>
     </widget>
    </widget>
@@ -209,19 +209,6 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QTextBrowser" name="tbOnLineUsers">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>30</y>
-       <width>330</width>
-       <height>331</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(238, 238, 236);</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
@@ -242,6 +229,19 @@
       <string>On-Line Users:</string>
      </property>
     </widget>
+    <widget class="QListWidget" name="lwOnlineUsers">
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>25</y>
+       <width>330</width>
+       <height>341</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(243, 243, 243);</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -249,7 +249,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>783</width>
+     <width>782</width>
      <height>22</height>
     </rect>
    </property>
